# 2025-I

./: .gitignore  README.md
CG/: comparisonTable.md
CG/W1/: exercises.py  lab1.py  lab2.py  script.py
CG/W10/: M_cubes.cpp  complex_mesh.ply  m_cubes.ply  marching_cubes2.cpp  marching_squares.cpp  mc_table.h  sphere_mesh.ply  torus_mesh.ply  voxel_mesh.ply
CG/W12/: requirements.txt  sift_bfknn.py  sift_flann.py  sift_keypoints.py
CG/W13/: detect-and-overlay.py  show-cube.py
CG/W2/: lab1.py  lab2.py
CG/W3/: lab1.py
CG/W4/: p1.cpp  p2.cpp  p3.cpp
CG/W5/: CMakeLists.txt  p2.cpp
CG/W8/: sphere.cpp  sphere.ply  test.ply
CG/W9/: Marching_Squares2.eps  Marching_Squares3.eps  epsfun.cpp  marching2.cpp  marching_squares.cpp  marching_squares_16_cases.eps  p8.cpp  punto_central.eps  segment.eps  subdivision.cpp
CG/final/: solucion-problema1.py  solucion-problema11.py  solucion-problema2.py  test_maze_solver.py
CG/pc2/: compile_test.bat  readme-pc2.md
CG/pc4/: requirements.txt
CG/project-ideas/: script.py
CP/: template.cpp
CP/CSES/: Couting_Divisors.cpp
CP/W1/: A.cpp
CP/W12/: segment_tree.cpp
CP/W16/: C.cpp  I.cpp  J.cpp  L.cpp
CP/W3/: A.cpp
CP/W5/: readme.md
CP/W7/: A.cpp
CP/W8/: D.cpp  H.cpp
EDA/: CMakeLists.txt
EDA/BSPtree/: BSPTree.h  CMakeLists.txt  DataType.h  Line.h  Plane.h  main.cpp
EDA/Mtree/: CMakeLists.txt  Mtree.h  Object.h  main.cpp
EDA/Rtree/: CMakeLists.txt  Rtree.h  Rtree2.h  main.cpp  main2.cpp  queryentry.cpp
EDA/SRtree/: CMakeLists.txt  MBB.h  Point.h  SRtree.h  Sphere.h  (+2 more)
EDA/W3/BSPtree/: Ball.h  CMakeLists.txt  Plane.h  Point.h  main.cpp
(+361 files in other folders)
